# vanillasteel

./: .gitignore  Makefile  README.md  docker-compose.yml
files/: preference-coils.csv  preference-empty.csv  preference-seamless-round-tubes.csv  preference-square-bars.csv
frontend/: netlify.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  custom.d.ts  index.css  index.tsx
frontend/src/components/: Paginator.tsx  ProductsTable.css  ProductsTable.tsx  Sidebar.css  Sidebar.tsx
frontend/src/components/products-table/: ProductsTable.css  ProductsTable.tsx  Table.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: usePreference.ts  useProducts.ts
frontend/src/pages/: About.test.tsx  About.tsx  Dashboard.css  Dashboard.test.tsx  Dashboard.tsx  Search.test.tsx  Search.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/util/: sorting.ts
service/: Makefile  pyproject.toml
service/app/: main.py
service/app/db/: database.py  seed.py
service/app/models/: preference_model.py  product_model.py
service/app/preference/: preference_api.py  preference_service.py
service/app/product/: product_api.py
service/app/products/: product_api.py  product_service.py  products_api.py  products_service.py
service/app/util/: converters.py
service/tests/: test_main.py
service/tests/product/: test_product_api.py  test_products_api.py
service/tests/util/: test_converters.py
