[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Siddiq Akbar <siddiq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "0.30.6"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
